--- a/app/src/main/res/layout/item_full_calendar_month.xml
+++ b/app/src/main/res/layout/item_full_calendar_month.xml
@@ -15,8 +15,8 @@
             style="@style/TextAppearance.MaterialComponents.Subtitle1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="top|center"
-            android:layout_margin="4dp"
+            android:layout_gravity="center"
+            android:layout_margin="3dp"
             android:gravity="center"
             android:textStyle="bold"
             android:paddingTop="2dp"
