--- a/app/src/main/res/layout/dialog_inspection_schedule_calendar.xml
+++ b/app/src/main/res/layout/dialog_inspection_schedule_calendar.xml
@@ -90,7 +90,7 @@
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chip_all"
-            style="@style/Widget.MaterialComponents.Chip.Filter"
+            style="@style/ElectricMotorChipStyle"
             android:layout_width="wrap_content"
             android:layout_height="44dp"
             android:layout_marginEnd="4dp"
@@ -108,7 +108,7 @@
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chip_nse"
-            style="@style/Widget.MaterialComponents.Chip.Filter"
+            style="@style/ElectricMotorChipStyle"
             android:layout_width="wrap_content"
             android:layout_height="44dp"
             android:layout_marginEnd="4dp"
@@ -125,7 +125,7 @@
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chip_dem"
-            style="@style/Widget.MaterialComponents.Chip.Filter"
+            style="@style/ElectricMotorChipStyle"
             android:layout_width="wrap_content"
             android:layout_height="44dp"
             android:fontFamily="@font/ru_hero"
