--- a/app/src/main/res/layout/item_full_calendar_month_v2.xml
+++ b/app/src/main/res/layout/item_full_calendar_month_v2.xml
@@ -15,8 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top|center"
-            android:layout_marginTop="2dp"
-            android:layout_marginBottom="2dp"
+            android:layout_margin="3dp"
             android:gravity="center"
             android:textStyle="bold"
             android:paddingTop="2dp"
