--- a/app/src/main/res/layout/item_full_calendar_prev_month_widget.xml
+++ b/app/src/main/res/layout/item_full_calendar_prev_month_widget.xml
@@ -4,10 +4,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
+
         android:id="@+id/item_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/background_calendar_month"
+        android:background="@color/background_calendar_month_prev"
         android:orientation="vertical">
 
         <TextView
@@ -16,18 +17,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="3dp"
+            android:layout_margin="2dp"
+            android:alpha="0.5"
             android:text="1"
             android:gravity="center"
-            android:textStyle="bold"
             android:paddingTop="2dp"
-            android:paddingBottom="10dp"
-            android:textColor="@color/calendar_background"
-            android:textSize="20sp" />
+            android:paddingBottom="2dp"
+            android:textColor="@color/name_devices_appbar"
+            android:textSize="16sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="2dp"
+            android:visibility="invisible"
             android:alpha="0.3"
             android:background="@drawable/home_background" />
 
@@ -36,6 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
+            android:visibility="invisible"
             android:layout_marginEnd="2dp"
             android:alpha="0.5"
             android:gravity="start"
@@ -43,7 +46,7 @@
 
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="16dp"
+                android:layout_height="12dp"
                 android:src="@drawable/arrow_right" />
 
             <TextView
@@ -53,7 +56,7 @@
                 android:layout_height="wrap_content"
                 android:text="A"
                 android:textColor="@color/chip_appbar"
-                android:textSize="10sp" />
+                android:textSize="8sp" />
         </LinearLayout>
 
         <TextView
@@ -63,21 +66,21 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
             android:layout_marginEnd="2dp"
-            android:layout_marginTop="1dp"
-            android:layout_marginBottom="1dp"
             android:alpha="0.5"
             android:gravity="center"
             android:text="B"
+            android:visibility="invisible"
             android:textColor="@color/chip_appbar"
-            android:textSize="12sp" />
+            android:textSize="10sp" />
 
         <LinearLayout
             android:id="@+id/image_nex_night_shift"
             android:layout_width="match_parent"
+            android:visibility="invisible"
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
             android:layout_marginEnd="2dp"
-            android:layout_marginBottom="2dp"
+            android:layout_marginBottom="1dp"
             android:alpha="0.5"
             android:gravity="end"
             android:orientation="horizontal">
@@ -90,11 +93,11 @@
                 android:gravity="center"
                 android:text="C"
                 android:textColor="@color/chip_appbar"
-                android:textSize="10sp" />
+                android:textSize="8sp" />
 
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="16dp"
+                android:layout_height="12dp"
                 android:layout_gravity="end"
                 android:src="@drawable/arrow_right" />
         </LinearLayout>
