--- a/app/src/main/res/layout/shift_schedule_widget.xml
+++ b/app/src/main/res/layout/shift_schedule_widget.xml
@@ -10,9 +10,9 @@
             <ImageView
                 android:id="@+id/iv_calendar_previous"
                 android:layout_width="80dp"
-                android:layout_height="36dp"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="24dp"
+                android:layout_height="26dp"
+                android:layout_marginStart="24dp"
+
                 android:alpha="0.4"
                 android:contentDescription="@string/cd_previous"
                 android:src="@drawable/ic_previous"
@@ -21,9 +21,9 @@
             <ImageView
                 android:id="@+id/iv_calendar_next"
                 android:layout_width="80dp"
-                android:layout_height="36dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="32dp"
+                android:layout_height="26dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginEnd="24dp"
                 android:alpha="0.4"
                 android:contentDescription="@string/cd_next"
                 android:src="@drawable/ic_next"
@@ -34,9 +34,9 @@
                 style="@style/TextAppearance.MaterialComponents.Subtitle2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:textColor="@color/name_devices_appbar"
-                android:textSize="20sp"
+                android:layout_marginTop="2dp"
+                android:textColor="@color/orange_zero_vision"
+                android:textSize="14sp"
                 android:layout_centerHorizontal="true"
                 tools:text="December 2020" />
 
@@ -44,7 +44,7 @@
                 android:id="@+id/calendar_header"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="12dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
                 android:layout_below="@id/tv_date_month">
@@ -131,12 +131,7 @@
             <GridView
                 android:id="@+id/gridView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:numColumns="7"
-                android:stretchMode="columnWidth"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="8dp"
-                tools:listitem="@layout/item_full_calendar_month"
-                android:layout_marginRight="8dp"
                 android:layout_below="@id/calendar_header" />
 </RelativeLayout>
