--- a/app/src/main/res/xml/shift_schedule_widget_info.xml
+++ b/app/src/main/res/xml/shift_schedule_widget_info.xml
@@ -7,7 +7,8 @@
     android:minWidth="250dp"
     android:minHeight="250dp"
     android:previewImage="@drawable/example_appwidget_preview"
-    android:previewLayout="@layout/shift_schedule_widget"
+    android:autoAdvanceViewId="@id/gridView"
+
     android:resizeMode="horizontal|vertical"
     android:targetCellWidth="4"
     android:targetCellHeight="4"
