--- a/app/src/main/res/layout/shift_schedule_widget.xml
+++ b/app/src/main/res/layout/shift_schedule_widget.xml
@@ -12,7 +12,6 @@
                 android:layout_width="80dp"
                 android:layout_height="26dp"
                 android:layout_marginStart="24dp"
-
                 android:alpha="0.4"
                 android:contentDescription="@string/cd_previous"
                 android:src="@drawable/ic_previous"
@@ -131,7 +130,16 @@
             <GridView
                 android:id="@+id/gridView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:numColumns="7"
                 android:layout_below="@id/calendar_header" />
+
+    <ImageView
+        android:id="@+id/button_setting"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_below="@id/gridView"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="16dp"
+        android:src="@drawable/baseline_settings_24" />
 </RelativeLayout>
