--- a/app/src/main/res/layout/shift_schedule_widget.xml
+++ b/app/src/main/res/layout/shift_schedule_widget.xml
@@ -9,9 +9,9 @@
 
             <ImageView
                 android:id="@+id/iv_calendar_previous"
-                android:layout_width="80dp"
+                android:layout_width="64dp"
                 android:layout_height="26dp"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="40dp"
                 android:alpha="0.4"
                 android:contentDescription="@string/cd_previous"
                 android:src="@drawable/ic_previous"
@@ -19,10 +19,10 @@
 
             <ImageView
                 android:id="@+id/iv_calendar_next"
-                android:layout_width="80dp"
+                android:layout_width="64dp"
                 android:layout_height="26dp"
                 android:layout_marginTop="0dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginEnd="40dp"
                 android:alpha="0.4"
                 android:contentDescription="@string/cd_next"
                 android:src="@drawable/ic_next"
@@ -130,7 +130,7 @@
             <GridView
                 android:id="@+id/gridView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:numColumns="7"
                 android:layout_below="@id/calendar_header" />
 
@@ -138,8 +138,10 @@
         android:id="@+id/button_setting"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_below="@id/gridView"
+        android:layout_above="@+id/calendar_header"
+
+
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="4dp"
         android:src="@drawable/baseline_settings_24" />
 </RelativeLayout>
