--- a/app/src/main/res/layout/shift_schedule_widget.xml
+++ b/app/src/main/res/layout/shift_schedule_widget.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/widget_layout"
     style="@style/Widget.SvetlogorskCHPP.AppWidget.Container"
     android:layout_width="match_parent"
     android:background="@drawable/calendar_fragment_kontur_revers"
