--- a/app/src/main/res/layout/item_full_calendar_month_widget.xml
+++ b/app/src/main/res/layout/item_full_calendar_month_widget.xml
@@ -1,97 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_margin="1dp"
-        android:id="@+id/item_layout"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/item_layout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginEnd="1dp"
+    android:layout_marginBottom="1dp"
+    android:background="@color/floatingActionButton"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/tv_calendar_date"
+        style="@style/TextAppearance.MaterialComponents.Subtitle1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/background_calendar_month"
-        android:orientation="vertical">
+        android:layout_gravity="center"
+        android:layout_margin="2dp"
+        android:gravity="center"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
+        android:text="1"
+        android:textColor="@color/calendar_background"
+        android:textSize="16sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:alpha="0.3"
+        android:background="@drawable/home_background" />
+
+    <LinearLayout
+        android:id="@+id/image_prev_night_shift"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:layout_marginEnd="2dp"
+        android:alpha="0.5"
+        android:gravity="start"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="12dp"
+            android:src="@drawable/arrow_right" />
 
         <TextView
-            android:id="@+id/tv_calendar_date"
+            android:id="@+id/text_prev_night_shift"
             style="@style/TextAppearance.MaterialComponents.Subtitle1"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="2dp"
-            android:text="1"
-            android:gravity="center"
-            android:paddingTop="2dp"
-            android:paddingBottom="2dp"
-            android:textColor="@color/calendar_background"
-            android:textSize="16sp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:alpha="0.3"
-            android:background="@drawable/home_background" />
-
-        <LinearLayout
-            android:id="@+id/image_prev_night_shift"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="2dp"
-            android:layout_marginEnd="2dp"
-            android:alpha="0.5"
-            android:gravity="start"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="12dp"
-                android:src="@drawable/arrow_right" />
-
-            <TextView
-                android:id="@+id/text_prev_night_shift"
-                style="@style/TextAppearance.MaterialComponents.Subtitle1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="A"
-                android:textColor="@color/chip_appbar"
-                android:textSize="8sp" />
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/text_day_shift"
-            style="@style/TextAppearance.MaterialComponents.Subtitle1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="2dp"
-            android:layout_marginEnd="2dp"
-            android:alpha="0.5"
-            android:gravity="center"
-            android:text="B"
+            android:text="A"
             android:textColor="@color/chip_appbar"
-            android:textSize="10sp" />
-
-        <LinearLayout
-            android:id="@+id/image_nex_night_shift"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="2dp"
-            android:layout_marginEnd="2dp"
-            android:layout_marginBottom="1dp"
-            android:alpha="0.5"
-            android:gravity="end"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/text_nex_night_shift"
-                style="@style/TextAppearance.MaterialComponents.Subtitle1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="C"
-                android:textColor="@color/chip_appbar"
-                android:textSize="8sp" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="12dp"
-                android:layout_gravity="end"
-                android:src="@drawable/arrow_right" />
-        </LinearLayout>
+            android:textSize="8sp" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/text_day_shift"
+        style="@style/TextAppearance.MaterialComponents.Subtitle1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:layout_marginEnd="2dp"
+        android:alpha="0.5"
+        android:gravity="center"
+        android:text="B"
+        android:textColor="@color/chip_appbar"
+        android:textSize="10sp" />
+
+    <LinearLayout
+        android:id="@+id/image_nex_night_shift"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="2dp"
+        android:alpha="0.5"
+        android:gravity="end"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/text_nex_night_shift"
+            style="@style/TextAppearance.MaterialComponents.Subtitle1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="C"
+            android:textColor="@color/chip_appbar"
+            android:textSize="8sp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="12dp"
+            android:layout_gravity="end"
+            android:src="@drawable/arrow_right" />
+    </LinearLayout>
+</LinearLayout>
