--- a/app/src/main/res/layout/item_full_calendar_month_widget.xml
+++ b/app/src/main/res/layout/item_full_calendar_month_widget.xml
@@ -61,10 +61,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
         android:layout_marginEnd="2dp"
-        android:alpha="0.5"
+        android:alpha="0.85"
         android:gravity="center"
         android:text="B"
-        android:textColor="@color/chip_appbar"
+        android:textColor="#BFD6E7F3"
         android:textSize="10sp" />
 
     <LinearLayout
