--- a/app/src/main/res/layout/item_full_calendar_month_widget_v2.xml
+++ b/app/src/main/res/layout/item_full_calendar_month_widget_v2.xml
@@ -37,7 +37,7 @@
             android:layout_marginBottom="4dp"
             android:layout_marginEnd="1dp"
             android:layout_marginStart="1dp"
-            android:alpha="0.5"
+            android:alpha="0.85"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -51,7 +51,7 @@
                 android:text="A"
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="4dp"
-                android:textColor="@color/chip_appbar"
+                android:textColor="#B3D6E7F3"
                 android:textSize="12sp" />
         </LinearLayout>
 
