--- a/app/src/main/res/xml/shift_schedule_widget_info.xml
+++ b/app/src/main/res/xml/shift_schedule_widget_info.xml
@@ -11,5 +11,5 @@
     android:resizeMode="horizontal|vertical"
     android:targetCellWidth="4"
     android:targetCellHeight="4"
-    android:updatePeriodMillis="360"
     android:widgetCategory="home_screen" />
+   <!--android:updatePeriodMillis="360"-->
