--- a/app/src/main/res/layout/fragment_shift_schedule.xml
+++ b/app/src/main/res/layout/fragment_shift_schedule.xml
@@ -158,7 +158,7 @@
                         android:fontFamily="@font/ru_hero"
                         android:hint="26.05.2014"
                         android:textColor="@color/calendar_background"
-                        android:textSize="22sp"
+                        android:textSize="20sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -177,8 +177,8 @@
 
                             <androidx.constraintlayout.widget.ConstraintLayout
                                 android:id="@+id/dialog_staff_A"
-                                android:layout_width="100dp"
-                                android:layout_height="100dp"
+                                android:layout_width="88dp"
+                                android:layout_height="88dp"
                                 android:layout_marginStart="16dp"
                                 android:layout_marginTop="8dp"
                                 android:layout_marginBottom="16dp"
@@ -195,12 +195,13 @@
                                     android:gravity="center"
                                     android:text="СМЕНА"
                                     android:textColor="@color/calendar_background"
-                                    android:textSize="20sp"
+                                    android:textSize="18sp"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
                                     app:layout_constraintTop_toTopOf="parent" />
 
                                 <ImageView
+                                    android:id="@+id/imageView11"
                                     android:layout_width="40dp"
                                     android:layout_height="40dp"
                                     android:layout_marginStart="8dp"
@@ -213,23 +214,23 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginTop="10dp"
                                     android:layout_marginEnd="16dp"
                                     android:background="@drawable/background_with_arc"
                                     android:fontFamily="@font/ru_hero"
                                     android:text="А"
                                     android:textColor="@color/text_recycle_smile"
-                                    android:textSize="28sp"
+                                    android:textSize="24sp"
                                     android:textStyle="bold"
+                                    app:layout_constraintBottom_toBottomOf="@+id/imageView11"
                                     app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintTop_toBottomOf="@+id/textView" />
+                                    app:layout_constraintTop_toTopOf="@+id/imageView11" />
 
                             </androidx.constraintlayout.widget.ConstraintLayout>
 
                             <androidx.constraintlayout.widget.ConstraintLayout
                                 android:id="@+id/dialog_staff_B"
-                                android:layout_width="100dp"
-                                android:layout_height="100dp"
+                                android:layout_width="88dp"
+                                android:layout_height="88dp"
                                 android:layout_marginStart="16dp"
                                 android:layout_marginTop="8dp"
                                 android:layout_marginBottom="16dp"
@@ -246,12 +247,13 @@
                                     android:gravity="center"
                                     android:text="СМЕНА"
                                     android:textColor="@color/calendar_background"
-                                    android:textSize="20sp"
+                                    android:textSize="18sp"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
                                     app:layout_constraintTop_toTopOf="parent" />
 
                                 <ImageView
+                                    android:id="@+id/imageView12"
                                     android:layout_width="40dp"
                                     android:layout_height="40dp"
                                     android:layout_marginStart="8dp"
@@ -264,23 +266,23 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginTop="10dp"
                                     android:layout_marginEnd="16dp"
                                     android:background="@drawable/background_with_arc"
                                     android:fontFamily="@font/ru_hero"
                                     android:text="Б"
                                     android:textColor="@color/text_recycle_smile"
-                                    android:textSize="28sp"
+                                    android:textSize="24sp"
                                     android:textStyle="bold"
+                                    app:layout_constraintBottom_toBottomOf="@+id/imageView12"
                                     app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintTop_toBottomOf="@+id/textView2" />
+                                    app:layout_constraintTop_toTopOf="@+id/imageView12" />
 
                             </androidx.constraintlayout.widget.ConstraintLayout>
 
                             <androidx.constraintlayout.widget.ConstraintLayout
                                 android:id="@+id/dialog_staff_C"
-                                android:layout_width="100dp"
-                                android:layout_height="100dp"
+                                android:layout_width="88dp"
+                                android:layout_height="88dp"
                                 android:layout_marginStart="16dp"
                                 android:layout_marginTop="8dp"
                                 android:layout_marginBottom="16dp"
@@ -297,12 +299,13 @@
                                     android:gravity="center"
                                     android:text="СМЕНА"
                                     android:textColor="@color/calendar_background"
-                                    android:textSize="20sp"
+                                    android:textSize="18sp"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
                                     app:layout_constraintTop_toTopOf="parent" />
 
                                 <ImageView
+                                    android:id="@+id/imageView13"
                                     android:layout_width="40dp"
                                     android:layout_height="40dp"
                                     android:layout_marginStart="8dp"
@@ -315,23 +318,23 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginTop="10dp"
                                     android:layout_marginEnd="16dp"
                                     android:background="@drawable/background_with_arc"
                                     android:fontFamily="@font/ru_hero"
                                     android:text="В"
                                     android:textColor="@color/text_recycle_smile"
-                                    android:textSize="28sp"
+                                    android:textSize="24sp"
                                     android:textStyle="bold"
+                                    app:layout_constraintBottom_toBottomOf="@+id/imageView13"
                                     app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintTop_toBottomOf="@+id/textView3" />
+                                    app:layout_constraintTop_toTopOf="@+id/imageView13" />
 
                             </androidx.constraintlayout.widget.ConstraintLayout>
 
                             <androidx.constraintlayout.widget.ConstraintLayout
                                 android:id="@+id/dialog_staff_D"
-                                android:layout_width="100dp"
-                                android:layout_height="100dp"
+                                android:layout_width="88dp"
+                                android:layout_height="88dp"
                                 android:layout_marginStart="16dp"
                                 android:layout_marginTop="8dp"
                                 android:layout_marginBottom="16dp"
@@ -348,12 +351,13 @@
                                     android:gravity="center"
                                     android:text="СМЕНА"
                                     android:textColor="@color/calendar_background"
-                                    android:textSize="20sp"
+                                    android:textSize="18sp"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
                                     app:layout_constraintTop_toTopOf="parent" />
 
                                 <ImageView
+                                    android:id="@+id/imageView14"
                                     android:layout_width="40dp"
                                     android:layout_height="40dp"
                                     android:layout_marginStart="8dp"
@@ -366,23 +370,23 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginTop="10dp"
                                     android:layout_marginEnd="16dp"
                                     android:background="@drawable/background_with_arc"
                                     android:fontFamily="@font/ru_hero"
                                     android:text="Г"
                                     android:textColor="@color/text_recycle_smile"
-                                    android:textSize="28sp"
+                                    android:textSize="24sp"
                                     android:textStyle="bold"
+                                    app:layout_constraintBottom_toBottomOf="@+id/imageView14"
                                     app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintTop_toBottomOf="@+id/textView4" />
+                                    app:layout_constraintTop_toTopOf="@+id/imageView14" />
 
                             </androidx.constraintlayout.widget.ConstraintLayout>
 
                             <androidx.constraintlayout.widget.ConstraintLayout
                                 android:id="@+id/dialog_staff_E"
-                                android:layout_width="100dp"
-                                android:layout_height="100dp"
+                                android:layout_width="88dp"
+                                android:layout_height="88dp"
                                 android:layout_marginStart="16dp"
                                 android:layout_marginTop="8dp"
                                 android:layout_marginBottom="16dp"
@@ -399,12 +403,13 @@
                                     android:gravity="center"
                                     android:text="СМЕНА"
                                     android:textColor="@color/calendar_background"
-                                    android:textSize="20sp"
+                                    android:textSize="18sp"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
                                     app:layout_constraintTop_toTopOf="parent" />
 
                                 <ImageView
+                                    android:id="@+id/imageView15"
                                     android:layout_width="40dp"
                                     android:layout_height="40dp"
                                     android:layout_marginStart="8dp"
@@ -417,16 +422,17 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginTop="10dp"
+
                                     android:layout_marginEnd="16dp"
                                     android:background="@drawable/background_with_arc"
                                     android:fontFamily="@font/ru_hero"
                                     android:text="Д"
                                     android:textColor="@color/text_recycle_smile"
-                                    android:textSize="28sp"
+                                    android:textSize="24sp"
                                     android:textStyle="bold"
+                                    app:layout_constraintBottom_toBottomOf="@+id/imageView15"
                                     app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintTop_toBottomOf="@+id/textView5" />
+                                    app:layout_constraintTop_toTopOf="@+id/imageView15" />
 
                             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -445,6 +451,19 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:srcCompat="@drawable/image_editor_shift_schedule_click" />
+
+                    <ImageView
+                        android:id="@+id/iv_notification"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="16dp"
+                        android:clickable="true"
+                        android:focusable="true"
+                        app:layout_constraintBottom_toBottomOf="@+id/shift_composition_editor"
+                        app:layout_constraintEnd_toStartOf="@+id/shift_composition_editor"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/baseline_notifications_24" />
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
